--- a/ARGtester/en.lproj/MainStoryboard.storyboard
+++ b/ARGtester/en.lproj/MainStoryboard.storyboard
@@ -218,15 +218,52 @@
             </objects>
             <point key="canvasLocation" x="508" y="72"/>
         </scene>
-        <!--View Controller-->
+        <!--Simple Image View Controller-->
         <scene sceneID="iht-oe-CaS">
             <objects>
-                <viewController id="ap3-HO-qWA" sceneMemberID="viewController">
+                <viewController id="ap3-HO-qWA" customClass="SimpleImageViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="a90-nW-Heh">
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" id="x7x-XZ-jJ9">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="320" sectionHeaderHeight="22" sectionFooterHeight="22" id="419-kF-H3n">
+                                        <rect key="frame" x="0.0" y="30" width="320" height="512"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="ap3-HO-qWA" id="hq0-S6-ApY"/>
+                                        </connections>
+                                    </tableView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="JTR-Vw-Zz5">
+                                        <rect key="frame" x="284" y="1" width="32" height="33"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" title="終">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="onClickCloseBtn:" destination="ap3-HO-qWA" eventType="touchUpInside" id="L1x-me-n5x"/>
+                                            <action selector="onClosedBt:" destination="ap3-HO-qWA" eventType="touchUpInside" id="Adb-K3-Nko"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="bgView" destination="x7x-XZ-jJ9" id="LAX-Od-d90"/>
+                        <outlet property="tableView" destination="419-kF-H3n" id="gua-mH-zZk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="se2-Xt-057" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -250,33 +287,6 @@
     <resources>
         <image name="button_chair_unselected.png" width="77" height="77"/>
     </resources>
-    <classes>
-        <class className="EAGLView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/EAGLView.h"/>
-        </class>
-        <class className="MetaioSDKViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MetaioSDKViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onBtnClosePushed:"/>
-                <relationship kind="outlet" name="closeButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="glView" candidateClass="EAGLView"/>
-            </relationships>
-        </class>
-        <class className="MetaioViewController" superclassName="MetaioSDKViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MetaioViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="onClearScreen:"/>
-                <relationship kind="action" name="onClickCloseBtn:"/>
-                <relationship kind="action" name="onPrinterButtonClick:"/>
-                <relationship kind="action" name="onSaveScreen:"/>
-                <relationship kind="action" name="onTakePicture:"/>
-                <relationship kind="outlet" name="subview" candidateClass="UIView"/>
-            </relationships>
-        </class>
-        <class className="RIViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/RIViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
