--- a/ARGtester/en.lproj/MainStoryboard.storyboard
+++ b/ARGtester/en.lproj/MainStoryboard.storyboard
@@ -280,13 +280,8 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" id="7nK-7R-VkA">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </webView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="FNO-9o-Lqf">
-                                <rect key="frame" x="282" y="9" width="32" height="33"/>
+                                <rect key="frame" x="283" y="0.0" width="32" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="終">
@@ -300,17 +295,9 @@
                                     <action selector="onClickCloseBtn:" destination="62X-da-Kno" eventType="touchUpInside" id="HBh-Ye-Gjc"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" style="gray" id="pZN-qL-oOl">
-                                <rect key="frame" x="150" y="264" width="20" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </activityIndicatorView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <connections>
-                        <outlet property="indicator" destination="pZN-qL-oOl" id="aIH-GM-ATY"/>
-                        <outlet property="webView" destination="7nK-7R-VkA" id="M8M-XD-fwl"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jar-hQ-25Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
