--- a/ARGtester/en.lproj/MainStoryboard.storyboard
+++ b/ARGtester/en.lproj/MainStoryboard.storyboard
@@ -25,7 +25,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="onClickCloseBtn:" destination="c4S-wk-dlQ" eventType="touchUpInside" id="h2O-T1-Ghw"/>
+                                    <segue destination="2" kind="modal" id="BBA-YS-r2B"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -34,7 +34,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bu7-2H-lCV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="552" y="1496"/>
+            <point key="canvasLocation" x="-509" y="1278"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="5">
@@ -329,13 +329,20 @@
                                     <action selector="onClickCloseBtn:" destination="62X-da-Kno" eventType="touchUpInside" id="HBh-Ye-Gjc"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="画面" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wGj-Ws-vSe">
+                                <rect key="frame" x="139" y="256" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jar-hQ-25Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="70" y="800"/>
+            <point key="canvasLocation" x="106" y="438"/>
         </scene>
     </scenes>
     <resources>
